--- a/index.html
+++ b/index.html
@@ -323,6 +323,19 @@
 											<h3 class="title">Đồng Hồ</h3>
 										</div>
 									</div>
+									<div class="col l-6 m-6 s-12">
+										<div class="i-did">
+											<a
+												href="https://nghiane.cf/products/caro"
+												><div class="img">
+													<img
+														src="./assets/imgs/idid/caro.png"
+														alt="Caro"
+													/></div
+											></a>
+											<h3 class="title">Cờ Caro</h3>
+										</div>
+									</div>
 								</div>
 							</div>
 
